# distro

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build_windows.bat  clean.bat  clean.sh  install-deps  install-deps.bat  install-nv.sh  install.bat  install.sh  installdeps_win.bat  repo-remotes.gitinfo  run.sh  test.bat  test.sh  torch-active.bat  travis_cuda_install.sh  uninstall.bat  update.sh
admin/: updateSubmodules.sh
cmake/: FindTorch.cmake
cmake/3.6/: CMakeLists.txt
cmake/3.6/Modules/FindCUDA/: select_compute_arch.cmake
debian/: changelog  control  gbp.conf  rules  shlibs.local  torch7-nv.install  torch7-nv.lintian-overrides  torch7-nv.postinst
exe/: CMakeLists.txt
extra/: CMakeLists.txt  CMakeLists.txt~
pkg/: CMakeLists.txt
scripts/: build-package.sh  mod2tree.sh  post-install.sh  translate_comments.sed  translate_comments.sed~  translate_comments_prepare.sed  translate_header.sh
scripts/pbuilder-env/: create-ubuntu-build-environment.sh
win-files/: README.md  cmake.cmd  graph-scm-1.rockspec  install_lapack.sh  luaffi-scm-1.rockspec  sys-1.1-0.rockspec  torch-scm-1.rockspec  trepl-scm-1.rockspec
win-files/patch/: cudnn.patch  cunn.patch  cutorch.patch  graph.patch  graphicsmagick.patch  image.patch  lua-cjson.patch  luaffifb.patch  nngraph.patch  paths.patch  sundown.patch  sys.patch  torch.patch  trepl.patch  trepl.x86.patch
win-files/test/: ffifb_perf_ffi.lua  ffifb_perf_purelua.lua
