cmake_minimum_required(VERSION 2.8)
ADD_SUBDIRECTORY(exe)

# If this variable is defined, a pure cmake build is done end-to-end with no luarocks needed
IF (DEFINED TORCH_DISTRO_CMAKE_BUILD)

  # LUA_INCDIR - place where lua headers exist
  # LUA_LIBDIR - place where lua libraries exist
  # LUADIR - LUA_PATH
  # LIBDIR - LUA_CPATH
  # LUALIB - the lua library to link against

  IF (NOT DEFINED ${LUA_INCDIR})
     SET(LUA_INCDIR ${Lua_SOURCE_DIR}/src ${Lua_BINARY_DIR})
     MESSAGE(STATUS "LUA_INCDIR: ${LUA_INCDIR}")
  ENDIF(NOT DEFINED ${LUA_INCDIR})
  IF (NOT DEFINED ${LUA_LIBDIR})
     SET(LUA_LIBDIR ${CMAKE_INSTALL_PREFIX}/lib)
     MESSAGE(STATUS "LUA_LIBDIR: ${LUA_LIBDIR}")
  ENDIF(NOT DEFINED ${LUA_LIBDIR})
  IF (NOT DEFINED ${LUALIB})
     SET(LUALIB ${LIBRARY_OUTPUT_PATH}/liblua.so)
     MESSAGE(STATUS "LUALIB: ${LUALIB}")
  ENDIF(NOT DEFINED ${LUALIB})
  IF (NOT DEFINED ${LUADIR})
     SET(LUADIR ${CMAKE_INSTALL_PREFIX}/${INSTALL_LUA_PATH_SUBDIR})
     MESSAGE(STATUS "LUADIR: ${LUADIR}")
  ENDIF(NOT DEFINED ${LUADIR})
  IF (NOT DEFINED ${LIBDIR})
     SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/${INSTALL_LUA_CPATH_SUBDIR})
     MESSAGE(STATUS "LIBDIR: ${LIBDIR}")
  ENDIF(NOT DEFINED ${LIBDIR})

  ADD_SUBDIRECTORY(pkg)

  # add torch defs
  SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_INSTALL_PREFIX}/share/cmake/torch)
  INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/pkg/torch/lib/TH")
  INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}/pkg/torch/lib/TH")
  INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/pkg/torch/lib/luaT")
  INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}/pkg/torch/lib/luaT")

  ADD_SUBDIRECTORY(extra)

ENDIF (DEFINED TORCH_DISTRO_CMAKE_BUILD)
