cmake_minimum_required(VERSION 2.8)
ADD_SUBDIRECTORY(nn)
ADD_SUBDIRECTORY(graph)
ADD_SUBDIRECTORY(nngraph)
ADD_SUBDIRECTORY(nnx)
ADD_SUBDIRECTORY(threads)
ADD_SUBDIRECTORY(argcheck)

IF (WITH_CUDA STREQUAL ON)
 ADD_SUBDIRECTORY(cutorch)
 ADD_SUBDIRECTORY(cunn)
 ADD_SUBDIRECTORY(cunnx)
 ADD_SUBDIRECTORY(cudnn)
ENDIF (WITH_CUDA STREQUAL ON)
