cmake_minimum_required(VERSION 2.8)
ADD_SUBDIRECTORY(sundown)
ADD_SUBDIRECTORY(cwrap)
ADD_SUBDIRECTORY(paths)

ADD_SUBDIRECTORY(torch)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_INSTALL_PREFIX}/share/cmake/torch)
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/torch/lib/TH")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}/torch/lib/TH")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/torch/lib/luaT")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}/torch/lib/luaT")
#MESSAGE(STATUS "cmake module path: ${CMAKE_MODULE_PATH}")
#MESSAGE(STATUS "cmake binary dir: ${CMAKE_CURRENT_BINARY_DIR}")
#MESSAGE(STATUS "cmake source dir: ${CMAKE_CURRENT_SOURCE_DIR}")

ADD_SUBDIRECTORY(dok)
ADD_SUBDIRECTORY(sys)
ADD_SUBDIRECTORY(xlua)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(optim)

